--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.5.0",
     "chai": "^4.3.7",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
@@ -22,6 +25,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "style-loader": "^3.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
